@@ -1,3 +1,6 @@
+Build 31 (?)
+- Added mouse panning. It disabled by default, in order to enable it, go to "Special" tab
+
 Build 30 (20.02.2013)
 - Removed div selection when clicking many time on unit box on right panel
 - Ability to pause game, by pressing P key.
